adding seo pages

--- a/scss/inc/base.scss
+++ b/scss/inc/base.scss
@@ -31,4 +31,5 @@ $height-header-mobile: 45px;
 
 /*
 https://meyerweb.com/eric/tools/css/reset/
+https://dribbble.com/shots/17035515/attachments/12119517?mode=media
 */
