--- a/scss/inc/template/_post-structure.scss
+++ b/scss/inc/template/_post-structure.scss
@@ -7,6 +7,7 @@
     background-color: $white;
     min-height: calc(100vh - 2vw);
     border-radius: 5px 5px 0  0;
+    padding-bottom: 5vw;
 
     header{
       padding-top: 5vw;
@@ -17,11 +18,32 @@
         align-items: flex-start;
         margin-top: 2vw;
 
+        .current{
+          a{
+            text-decoration: underline;
+            font-weight: 700;
+          }
+        }
+
         h2{
           color: $p-color-2;
           font-weight: 700;
           font-size: 1.5vw;
           letter-spacing: .5ch;
+          cursor: pointer;
+
+          .subpage{
+            color: $p-color-5;
+          }
+
+          a{
+            color: $p-color-2;
+            text-decoration: none;
+
+            &:hover{
+              text-decoration: underline;
+            }
+          }
         }
 
         ul{
@@ -32,8 +54,8 @@
           li{
             position: relative;
             margin: 0 1vw;
-  
-            a{
+            
+           a{
               color:$p-color-5;
               text-decoration: none;
               margin-left: 1vw;
@@ -63,6 +85,8 @@
                 margin: 0;
               }
             }
+
+            
           }
         }
       }
@@ -82,6 +106,20 @@
           padding: 1.3vw;
 
           margin-bottom: .7vw;
+
+          &.inside{
+            background-color: rgba($color: $p-color-6, $alpha: 0.3);
+            p,
+            span{
+              color: $p-color-1;
+            }
+          }
+
+          p{
+            color:$p-color-5;
+            line-height: 1.5;
+
+          }
 
           a{
             text-decoration: none;
@@ -104,6 +142,14 @@
 
           span{
             color: rgba($color: $p-color-5, $alpha: 0.7);
+          }
+
+          .info{
+            display: flex;
+
+            span{
+              padding-right: 10px;
+            }
           }
         }
       }
