--- a/scss/inc/pages/_home.scss
+++ b/scss/inc/pages/_home.scss
@@ -50,6 +50,7 @@
           align-items: center;
 
           margin-right: 10px;
+          margin-bottom: 10px;
           padding: 10px;
           border-radius: 5px;
 
